force-app/main/default/objects/Workspace_Attach__c/Workspace_Attach__c.object-meta.xml
<CustomObject>
    <description>Object to hold details of the Workspace Attach initiate. Object should be read only, data to be inputted through the integration.</description>
    <label>Workspace Attach</label>
    <nameField>
        <label>UNIQUENESS</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workspace Attach</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>