force-app/main/default/objects/Workspace_Attach__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Workspace Attach</relationshipLabel>
    <relationshipName>Workspace_Attach</relationshipName>
    <type>Lookup</type>
</CustomField>