force-app/main/default/objects/Workspace_Attach__c/fields/Cohort__c.field-meta.xml
<CustomField>
    <fullName>Cohort__c</fullName>
    <description>Cohort code which will enable grouping of records for reporting</description>
    <label>Cohort</label>
    <length>255</length>
    <type>Text</type>
</CustomField>