force-app/main/default/objects/Workspace_Attach__c/fields/Contract_No__c.field-meta.xml
<CustomField>
    <fullName>Contract_No__c</fullName>
    <description>SME contract number</description>
    <inlineHelpText>SME contract number</inlineHelpText>
    <label>Contract No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>