force-app/main/default/objects/Workspace_Attach__c/fields/Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Code__c</fullName>
    <description>Customer Code is inputted through integration. This should be the same as the customer code on the Account record</description>
    <label>Customer Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>