force-app/main/default/objects/Workspace_Attach__c/fields/Disputed__c.field-meta.xml
<CustomField>
    <fullName>Disputed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disputed</label>
    <type>Checkbox</type>
</CustomField>