force-app/main/default/objects/Workspace_Attach__c/fields/Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Invoiced__c</fullName>
    <label>Invoiced</label>
    <type>Date</type>
</CustomField>