force-app/main/default/objects/Workspace_Attach__c/fields/Live__c.field-meta.xml
<CustomField>
    <fullName>Live__c</fullName>
    <label>Workspace Live Date</label>
    <type>Date</type>
</CustomField>