force-app/main/default/objects/Workspace_Attach__c/fields/On_Boarding__c.field-meta.xml
<CustomField>
    <fullName>On_Boarding__c</fullName>
    <label>On Boarding</label>
    <type>Date</type>
</CustomField>