force-app/main/default/objects/Workspace_Attach__c/fields/Pot__c.field-meta.xml
<CustomField>
    <fullName>Pot__c</fullName>
    <label>Pot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>