force-app/main/default/objects/Workspace_Attach__c/fields/Started__c.field-meta.xml
<CustomField>
    <fullName>Started__c</fullName>
    <label>Started</label>
    <type>Date</type>
</CustomField>