force-app/main/default/objects/Workspace_Attach__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Cohort__c</columns>
    <columns>Product__c</columns>
    <columns>Pot__c</columns>
    <columns>Started__c</columns>
    <columns>Invoiced__c</columns>
    <columns>On_Boarding__c</columns>
    <columns>Live__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>